# phoebe

./: .gitignore  LICENSE  README.md  app.py  pyproject.toml  requirements.txt
audio/: analyze.py  download.py  manifest.py  process.py  scientific_names.txt
audio/data/: analysis.csv  app_data.json  licenses.md
images/data/: bird_images.jsonl  licenses.md
notebooks/: assemble_images.ipynb  audio_experimentation.ipynb  audio_expermentation.ipynb  audio_prep.ipynb
phoebe/: __init__.py  data.py
